# chrism-resume

./: .gitignore  README.md
cpp_journey/minecraft-design-ptrn/: CMakeLists.txt  README.md
cpp_journey/minecraft-design-ptrn/MinecraftWorld/: CMakeLists.txt  DESIGN.md  Makefile  README.md  biomeTest  make.md
cpp_journey/minecraft-design-ptrn/MinecraftWorld/Biomes/: AllPlainsBiomes.h  AllWoodLandsBiomes.h  Biome.h  BiomeConstructors.h  BiomeCreator.cpp  BiomeCreator.h  BiomesFactory.h  CMakeLists.txt  MainBiome.h  MinecraftBiome.h  PlainsBiome.cpp  PlainsBiome.h  PlainsBiomeFactory.h  PureBiome.h  WoodLandsBiome.cpp  WoodLandsBiome.h  WoodLandsBiomeFactory.h  testBiomes.cpp
cpp_journey/minecraft-design-ptrn/MinecraftWorld/Blocks/: DiamondBlock.cpp  DiamondBlock.h  PureBlock.h
cpp_journey/minecraft-design-ptrn/MinecraftWorld/CreateWorld/: MinecraftWorld.h  PureWorld.h  UniqueWorld.cpp  UniqueWorld.h  World.h  WorldConstructors.h
cpp_journey/minecraft-design-ptrn/MinecraftWorld/Food/: AppleFood.cpp  AppleFood.h  Food.h  FoodConstructors.h  MinecraftFood.h  PureFood.h  testFood.cpp
cpp_journey/minecraft-design-ptrn/testgame/: CMakeLists.txt  MainGameFx.h  minecraft_test.cpp
cpp_journey/podcast_studios/: CMakeLists.txt  README.md
cpp_journey/podcast_studios/podcastroom/: AuthoInfo.h  CMakeLists.txt  EventSingIn.cpp  EventSingIn.h  IBaseBuilder.h  IStudioService.h  PodPodcast.h  PodcastCalls.h  PodcastHost.h  PodcastRoom.h  StudioPodcast.h  StudioRoom.h  StudioService.h
cpp_journey/podcast_studios/testcases/: CMakeLists.txt  PodRoomFxTest.h  podcastroom_test.cpp
(+587 files in other folders)
